[project]
name = "banip"
version = "1.3.11"
description = "Create a list of banned IPs for specific countries"
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "rich>=13.9.4",
]
authors = [
    {name = "Peter Nardi", email = "geozeke@gmail.com"},
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.1",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.uv.sources]
banip = { workspace = true }

[project.scripts]
banip = "banip.app:main"

[build-system]
requires = ["uv-build>=0.10,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
exclude = [
    ".gitignore",
    "global-gitignore.txt",
    "Makefile",
    "samples/**",
    "uv.lock",
]
