[project]
name = "banip"
version = "1.4.1"
description = "Create a list of banned IPs for specific countries"
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "rich>=15.0.0",
]
authors = [
    {name = "Peter Nardi", email = "geozeke@gmail.com"},
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "ruff>=0.15.12",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.uv.sources]
banip = { workspace = true }

[project.scripts]
banip = "banip.app:main"

[build-system]
requires = ["uv-build>=0.10,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
exclude = [
    ".gitignore",
    "global-gitignore.txt",
    "Makefile",
    "samples/**",
    "uv.lock",
]
