[project]
name = "banip"
version = "2.0.0"
description = "Create a list of banned IP addresses for specific countries"
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "rich>=15.0.0",
    "ruamel-yaml>=0.19.1",
]
authors = [
    {name = "Peter Nardi", email = "geozeke@gmail.com"},
]

[project.urls]
Homepage = "https://github.com/geozeke/banip"
Repository = "https://github.com/geozeke/banip"

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.12",
]

[tool.uv]
cache-dir = ".uv-cache"
python-preference = "only-managed"

[tool.ruff.lint.isort]
force-single-line = true

[tool.uv.sources]
banip = { workspace = true }

[project.scripts]
banip = "banip.app:main"

[build-system]
requires = ["uv-build>=0.10,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "changelogs/**",
    "global-gitignore.txt",
    "samples/**",
]
source-exclude = [
    ".uv-cache/**",
]
